src/avdl/AvdlParser.ts
// Generated from Avdl.g4 by ANTLR 4.6-SNAPSHOT


import { ATN } from 'antlr4ts/atn/ATN';
import { ATNDeserializer } from 'antlr4ts/atn/ATNDeserializer';
import { FailedPredicateException } from 'antlr4ts/FailedPredicateException';
import { NotNull } from 'antlr4ts/Decorators';
import { NoViableAltException } from 'antlr4ts/NoViableAltException';
import { Override } from 'antlr4ts/Decorators';
import { Parser } from 'antlr4ts/Parser';
import { ParserRuleContext } from 'antlr4ts/ParserRuleContext';
import { ParserATNSimulator } from 'antlr4ts/atn/ParserATNSimulator';
import { ParseTreeListener } from 'antlr4ts/tree/ParseTreeListener';
import { ParseTreeVisitor } from 'antlr4ts/tree/ParseTreeVisitor';
import { RecognitionException } from 'antlr4ts/RecognitionException';
import { RuleContext } from 'antlr4ts/RuleContext';
import { RuleVersion } from 'antlr4ts/RuleVersion';
import { TerminalNode } from 'antlr4ts/tree/TerminalNode';
import { Token } from 'antlr4ts/Token';
import { TokenStream } from 'antlr4ts/TokenStream';
import { Vocabulary } from 'antlr4ts/Vocabulary';
import { VocabularyImpl } from 'antlr4ts/VocabularyImpl';

import * as Utils from 'antlr4ts/misc/Utils';

import { AvdlListener } from './AvdlListener';
import { AvdlVisitor } from './AvdlVisitor';


export class AvdlParser extends Parser {
	public static readonly T__0=1;
	public static readonly T__1=2;
	public static readonly T__2=3;
	public static readonly T__3=4;
	public static readonly T__4=5;
	public static readonly T__5=6;
	public static readonly T__6=7;
	public static readonly T__7=8;
	public static readonly T__8=9;
	public static readonly T__9=10;
	public static readonly T__10=11;
	public static readonly T__11=12;
	public static readonly T__12=13;
	public static readonly T__13=14;
	public static readonly T__14=15;
	public static readonly T__15=16;
	public static readonly T__16=17;
	public static readonly T__17=18;
	public static readonly T__18=19;
	public static readonly T__19=20;
	public static readonly T__20=21;
	public static readonly T__21=22;
	public static readonly T__22=23;
	public static readonly T__23=24;
	public static readonly T__24=25;
	public static readonly T__25=26;
	public static readonly T__26=27;
	public static readonly T__27=28;
	public static readonly T__28=29;
	public static readonly T__29=30;
	public static readonly T__30=31;
	public static readonly T__31=32;
	public static readonly T__32=33;
	public static readonly T__33=34;
	public static readonly BOOLEAN=35;
	public static readonly NULL=36;
	public static readonly NUMBER=37;
	public static readonly ANNOTATION=38;
	public static readonly IDENTIFIER=39;
	public static readonly STRING=40;
	public static readonly DOCUMENTATION=41;
	public static readonly WS=42;
	public static readonly COMMENT=43;
	public static readonly LINE_COMMENT=44;
	public static readonly RULE_protocol = 0;
	public static readonly RULE_imports = 1;
	public static readonly RULE_importAvdl = 2;
	public static readonly RULE_importAvsc = 3;
	public static readonly RULE_importAvpr = 4;
	public static readonly RULE_annotatedDeclaration = 5;
	public static readonly RULE_declaration = 6;
	public static readonly RULE_declareEnum = 7;
	public static readonly RULE_declareRecord = 8;
	public static readonly RULE_declareError = 9;
	public static readonly RULE_declareFixed = 10;
	public static readonly RULE_declareMethod = 11;
	public static readonly RULE_methodParam = 12;
	public static readonly RULE_declareField = 13;
	public static readonly RULE_typeAny = 14;
	public static readonly RULE_type = 15;
	public static readonly RULE_typeUnion = 16;
	public static readonly RULE_typeContainer = 17;
	public static readonly RULE_typeComplex = 18;
	public static readonly RULE_typeMap = 19;
	public static readonly RULE_typeArray = 20;
	public static readonly RULE_typePrimitive = 21;
	public static readonly RULE_annotation = 22;
	public static readonly RULE_object = 23;
	public static readonly RULE_pair = 24;
	public static readonly RULE_array = 25;
	public static readonly RULE_number = 26;
	public static readonly RULE_string = 27;
	public static readonly RULE_json = 28;
	public static readonly RULE_qualifiedName = 29;
	public static readonly RULE_identifier = 30;
	public static readonly RULE_namespacedIdentifier = 31;
	public static readonly ruleNames: string[] = [
		"protocol", "imports", "importAvdl", "importAvsc", "importAvpr", "annotatedDeclaration", 
		"declaration", "declareEnum", "declareRecord", "declareError", "declareFixed", 
		"declareMethod", "methodParam", "declareField", "typeAny", "type", "typeUnion", 
		"typeContainer", "typeComplex", "typeMap", "typeArray", "typePrimitive", 
		"annotation", "object", "pair", "array", "number", "string", "json", "qualifiedName", 
		"identifier", "namespacedIdentifier"
	];

	private static readonly _LITERAL_NAMES: (string | undefined)[] = [
		undefined, "'protocol'", "'{'", "'}'", "'import'", "'idl'", "';'", "'schema'", 
		"'enum'", "','", "'record'", "'error'", "'fixed'", "'('", "')'", "'void'", 
		"'throws'", "'oneway'", "'='", "'union'", "'map'", "'<'", "'>'", "'array'", 
		"'int'", "'long'", "'float'", "'double'", "'string'", "'bytes'", "'boolean'", 
		"':'", "'['", "']'", "'.'", undefined, "'null'"
	];
	private static readonly _SYMBOLIC_NAMES: (string | undefined)[] = [
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		undefined, undefined, undefined, undefined, undefined, undefined, undefined, 
		"BOOLEAN", "NULL", "NUMBER", "ANNOTATION", "IDENTIFIER", "STRING", "DOCUMENTATION", 
		"WS", "COMMENT", "LINE_COMMENT"
	];
	public static readonly VOCABULARY: Vocabulary = new VocabularyImpl(AvdlParser._LITERAL_NAMES, AvdlParser._SYMBOLIC_NAMES, []);

	@Override
	@NotNull
	public get vocabulary(): Vocabulary {
		return AvdlParser.VOCABULARY;
	}

	@Override
	public get grammarFileName(): string { return "Avdl.g4"; }

	@Override
	public get ruleNames(): string[] { return AvdlParser.ruleNames; }

	@Override
	public get serializedATN(): string { return AvdlParser._serializedATN; }

	constructor(input: TokenStream) {
		super(input);
		this._interp = new ParserATNSimulator(AvdlParser._ATN, this);
	}
	@RuleVersion(0)
	public protocol(): ProtocolContext {
		let _localctx: ProtocolContext = new ProtocolContext(this._ctx, this.state);
		this.enterRule(_localctx, 0, AvdlParser.RULE_protocol);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 67;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.ANNOTATION) {
				{
				{
				this.state = 64;
				this.annotation();
				}
				}
				this.state = 69;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 70;
			this.match(AvdlParser.T__0);
			this.state = 71;
			this.identifier();
			this.state = 72;
			this.match(AvdlParser.T__1);
			this.state = 76;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.T__3) {
				{
				{
				this.state = 73;
				this.imports();
				}
				}
				this.state = 78;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 82;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 8)) & ~0x1F) === 0 && ((1 << (_la - 8)) & ((1 << (AvdlParser.T__7 - 8)) | (1 << (AvdlParser.T__9 - 8)) | (1 << (AvdlParser.T__10 - 8)) | (1 << (AvdlParser.T__11 - 8)) | (1 << (AvdlParser.T__14 - 8)) | (1 << (AvdlParser.T__18 - 8)) | (1 << (AvdlParser.T__19 - 8)) | (1 << (AvdlParser.T__22 - 8)) | (1 << (AvdlParser.T__23 - 8)) | (1 << (AvdlParser.T__24 - 8)) | (1 << (AvdlParser.T__25 - 8)) | (1 << (AvdlParser.T__26 - 8)) | (1 << (AvdlParser.T__27 - 8)) | (1 << (AvdlParser.T__28 - 8)) | (1 << (AvdlParser.T__29 - 8)) | (1 << (AvdlParser.NULL - 8)) | (1 << (AvdlParser.ANNOTATION - 8)) | (1 << (AvdlParser.IDENTIFIER - 8)))) !== 0)) {
				{
				{
				this.state = 79;
				this.annotatedDeclaration();
				}
				}
				this.state = 84;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 85;
			this.match(AvdlParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public imports(): ImportsContext {
		let _localctx: ImportsContext = new ImportsContext(this._ctx, this.state);
		this.enterRule(_localctx, 2, AvdlParser.RULE_imports);
		try {
			this.state = 90;
			this._errHandler.sync(this);
			switch ( this.interpreter.adaptivePredict(this._input,3,this._ctx) ) {
			case 1:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 87;
				this.importAvdl();
				}
				break;

			case 2:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 88;
				this.importAvsc();
				}
				break;

			case 3:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 89;
				this.importAvpr();
				}
				break;
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public importAvdl(): ImportAvdlContext {
		let _localctx: ImportAvdlContext = new ImportAvdlContext(this._ctx, this.state);
		this.enterRule(_localctx, 4, AvdlParser.RULE_importAvdl);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 92;
			this.match(AvdlParser.T__3);
			this.state = 93;
			this.match(AvdlParser.T__4);
			this.state = 94;
			this.string();
			this.state = 95;
			this.match(AvdlParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public importAvsc(): ImportAvscContext {
		let _localctx: ImportAvscContext = new ImportAvscContext(this._ctx, this.state);
		this.enterRule(_localctx, 6, AvdlParser.RULE_importAvsc);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 97;
			this.match(AvdlParser.T__3);
			this.state = 98;
			this.match(AvdlParser.T__6);
			this.state = 99;
			this.string();
			this.state = 100;
			this.match(AvdlParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public importAvpr(): ImportAvprContext {
		let _localctx: ImportAvprContext = new ImportAvprContext(this._ctx, this.state);
		this.enterRule(_localctx, 8, AvdlParser.RULE_importAvpr);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 102;
			this.match(AvdlParser.T__3);
			this.state = 103;
			this.match(AvdlParser.T__0);
			this.state = 104;
			this.string();
			this.state = 105;
			this.match(AvdlParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public annotatedDeclaration(): AnnotatedDeclarationContext {
		let _localctx: AnnotatedDeclarationContext = new AnnotatedDeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 10, AvdlParser.RULE_annotatedDeclaration);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 110;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.ANNOTATION) {
				{
				{
				this.state = 107;
				this.annotation();
				}
				}
				this.state = 112;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 113;
			this.declaration();
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declaration(): DeclarationContext {
		let _localctx: DeclarationContext = new DeclarationContext(this._ctx, this.state);
		this.enterRule(_localctx, 12, AvdlParser.RULE_declaration);
		try {
			this.state = 120;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AvdlParser.T__7:
				this.enterOuterAlt(_localctx, 1);
				{
				this.state = 115;
				this.declareEnum();
				}
				break;
			case AvdlParser.T__9:
				this.enterOuterAlt(_localctx, 2);
				{
				this.state = 116;
				this.declareRecord();
				}
				break;
			case AvdlParser.T__10:
				this.enterOuterAlt(_localctx, 3);
				{
				this.state = 117;
				this.declareError();
				}
				break;
			case AvdlParser.T__11:
				this.enterOuterAlt(_localctx, 4);
				{
				this.state = 118;
				this.declareFixed();
				}
				break;
			case AvdlParser.T__14:
			case AvdlParser.T__18:
			case AvdlParser.T__19:
			case AvdlParser.T__22:
			case AvdlParser.T__23:
			case AvdlParser.T__24:
			case AvdlParser.T__25:
			case AvdlParser.T__26:
			case AvdlParser.T__27:
			case AvdlParser.T__28:
			case AvdlParser.T__29:
			case AvdlParser.NULL:
			case AvdlParser.IDENTIFIER:
				this.enterOuterAlt(_localctx, 5);
				{
				this.state = 119;
				this.declareMethod();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareEnum(): DeclareEnumContext {
		let _localctx: DeclareEnumContext = new DeclareEnumContext(this._ctx, this.state);
		this.enterRule(_localctx, 14, AvdlParser.RULE_declareEnum);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 122;
			this.match(AvdlParser.T__7);
			this.state = 123;
			this.identifier();
			this.state = 124;
			this.match(AvdlParser.T__1);
			this.state = 125;
			this.identifier();
			this.state = 130;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.T__8) {
				{
				{
				this.state = 126;
				this.match(AvdlParser.T__8);
				this.state = 127;
				this.identifier();
				}
				}
				this.state = 132;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 133;
			this.match(AvdlParser.T__2);
			this.state = 135;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===AvdlParser.T__5) {
				{
				this.state = 134;
				this.match(AvdlParser.T__5);
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareRecord(): DeclareRecordContext {
		let _localctx: DeclareRecordContext = new DeclareRecordContext(this._ctx, this.state);
		this.enterRule(_localctx, 16, AvdlParser.RULE_declareRecord);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 137;
			this.match(AvdlParser.T__9);
			this.state = 138;
			this.identifier();
			this.state = 139;
			this.match(AvdlParser.T__1);
			this.state = 143;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 19)) & ~0x1F) === 0 && ((1 << (_la - 19)) & ((1 << (AvdlParser.T__18 - 19)) | (1 << (AvdlParser.T__19 - 19)) | (1 << (AvdlParser.T__22 - 19)) | (1 << (AvdlParser.T__23 - 19)) | (1 << (AvdlParser.T__24 - 19)) | (1 << (AvdlParser.T__25 - 19)) | (1 << (AvdlParser.T__26 - 19)) | (1 << (AvdlParser.T__27 - 19)) | (1 << (AvdlParser.T__28 - 19)) | (1 << (AvdlParser.T__29 - 19)) | (1 << (AvdlParser.NULL - 19)) | (1 << (AvdlParser.ANNOTATION - 19)) | (1 << (AvdlParser.IDENTIFIER - 19)))) !== 0)) {
				{
				{
				this.state = 140;
				this.declareField();
				}
				}
				this.state = 145;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 146;
			this.match(AvdlParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareError(): DeclareErrorContext {
		let _localctx: DeclareErrorContext = new DeclareErrorContext(this._ctx, this.state);
		this.enterRule(_localctx, 18, AvdlParser.RULE_declareError);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 148;
			this.match(AvdlParser.T__10);
			this.state = 149;
			this.identifier();
			this.state = 150;
			this.match(AvdlParser.T__1);
			this.state = 154;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (((((_la - 19)) & ~0x1F) === 0 && ((1 << (_la - 19)) & ((1 << (AvdlParser.T__18 - 19)) | (1 << (AvdlParser.T__19 - 19)) | (1 << (AvdlParser.T__22 - 19)) | (1 << (AvdlParser.T__23 - 19)) | (1 << (AvdlParser.T__24 - 19)) | (1 << (AvdlParser.T__25 - 19)) | (1 << (AvdlParser.T__26 - 19)) | (1 << (AvdlParser.T__27 - 19)) | (1 << (AvdlParser.T__28 - 19)) | (1 << (AvdlParser.T__29 - 19)) | (1 << (AvdlParser.NULL - 19)) | (1 << (AvdlParser.ANNOTATION - 19)) | (1 << (AvdlParser.IDENTIFIER - 19)))) !== 0)) {
				{
				{
				this.state = 151;
				this.declareField();
				}
				}
				this.state = 156;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 157;
			this.match(AvdlParser.T__2);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareFixed(): DeclareFixedContext {
		let _localctx: DeclareFixedContext = new DeclareFixedContext(this._ctx, this.state);
		this.enterRule(_localctx, 20, AvdlParser.RULE_declareFixed);
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 159;
			this.match(AvdlParser.T__11);
			this.state = 160;
			this.identifier();
			this.state = 161;
			this.match(AvdlParser.T__12);
			this.state = 162;
			this.identifier();
			this.state = 163;
			this.match(AvdlParser.T__13);
			this.state = 164;
			this.match(AvdlParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareMethod(): DeclareMethodContext {
		let _localctx: DeclareMethodContext = new DeclareMethodContext(this._ctx, this.state);
		this.enterRule(_localctx, 22, AvdlParser.RULE_declareMethod);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 168;
			this._errHandler.sync(this);
			switch (this._input.LA(1)) {
			case AvdlParser.T__18:
			case AvdlParser.T__19:
			case AvdlParser.T__22:
			case AvdlParser.T__23:
			case AvdlParser.T__24:
			case AvdlParser.T__25:
			case AvdlParser.T__26:
			case AvdlParser.T__27:
			case AvdlParser.T__28:
			case AvdlParser.T__29:
			case AvdlParser.NULL:
			case AvdlParser.IDENTIFIER:
				{
				this.state = 166;
				this.typeAny();
				}
				break;
			case AvdlParser.T__14:
				{
				this.state = 167;
				this.match(AvdlParser.T__14);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			this.state = 170;
			this.match(AvdlParser.IDENTIFIER);
			this.state = 171;
			this.match(AvdlParser.T__12);
			this.state = 180;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (((((_la - 19)) & ~0x1F) === 0 && ((1 << (_la - 19)) & ((1 << (AvdlParser.T__18 - 19)) | (1 << (AvdlParser.T__19 - 19)) | (1 << (AvdlParser.T__22 - 19)) | (1 << (AvdlParser.T__23 - 19)) | (1 << (AvdlParser.T__24 - 19)) | (1 << (AvdlParser.T__25 - 19)) | (1 << (AvdlParser.T__26 - 19)) | (1 << (AvdlParser.T__27 - 19)) | (1 << (AvdlParser.T__28 - 19)) | (1 << (AvdlParser.T__29 - 19)) | (1 << (AvdlParser.NULL - 19)) | (1 << (AvdlParser.IDENTIFIER - 19)))) !== 0)) {
				{
				this.state = 172;
				this.methodParam();
				this.state = 177;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
				while (_la===AvdlParser.T__8) {
					{
					{
					this.state = 173;
					this.match(AvdlParser.T__8);
					this.state = 174;
					this.methodParam();
					}
					}
					this.state = 179;
					this._errHandler.sync(this);
					_la = this._input.LA(1);
				}
				}
			}

			this.state = 182;
			this.match(AvdlParser.T__13);
			this.state = 185;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===AvdlParser.T__15) {
				{
				this.state = 183;
				this.match(AvdlParser.T__15);
				this.state = 184;
				this.identifier();
				}
			}

			this.state = 188;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===AvdlParser.T__16) {
				{
				this.state = 187;
				this.match(AvdlParser.T__16);
				}
			}

			this.state = 190;
			this.match(AvdlParser.T__5);
			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public methodParam(): MethodParamContext {
		let _localctx: MethodParamContext = new MethodParamContext(this._ctx, this.state);
		this.enterRule(_localctx, 24, AvdlParser.RULE_methodParam);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 192;
			this.typeAny();
			this.state = 193;
			this.identifier();
			this.state = 196;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===AvdlParser.T__17) {
				{
				this.state = 194;
				this.match(AvdlParser.T__17);
				this.state = 195;
				this.json();
				}
			}

			}
		}
		catch (re) {
			if (re instanceof RecognitionException) {
				_localctx.exception = re;
				this._errHandler.reportError(this, re);
				this._errHandler.recover(this, re);
			} else {
				throw re;
			}
		}
		finally {
			this.exitRule();
		}
		return _localctx;
	}
	@RuleVersion(0)
	public declareField(): DeclareFieldContext {
		let _localctx: DeclareFieldContext = new DeclareFieldContext(this._ctx, this.state);
		this.enterRule(_localctx, 26, AvdlParser.RULE_declareField);
		let _la: number;
		try {
			this.enterOuterAlt(_localctx, 1);
			{
			this.state = 201;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.ANNOTATION) {
				{
				{
				this.state = 198;
				this.annotation();
				}
				}
				this.state = 203;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 204;
			this.typeAny();
			this.state = 208;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			while (_la===AvdlParser.ANNOTATION) {
				{
				{
				this.state = 205;
				this.annotation();
				}
				}
				this.state = 210;
				this._errHandler.sync(this);
				_la = this._input.LA(1);
			}
			this.state = 211;
			this.identifier();
			this.state = 214;
			this._errHandler.sync(this);
			_la = this._input.LA(1);
			if (_la===AvdlParser.T__17) {
				{
				this.state = 212;
				this.match(AvdlParser.T__17);
				this.state = 213;
				this.json();
				}
			}
